# EasyCon

./: .editorconfig  .gitignore  DESIGN.md  Directory.Build.props  Directory.Packages.props  Directory.packages.props  EasyCon Assist.md  EasyCon2.sln  EasyCon2.slnx  Icon.psd  IconEC.psd  JoyCon.psd  LICENSE.md  PLAN.md  PokemonTycoon.sln  README.md  build.bat  buildScript.bat  buildViwer.bat  release.bat  release_exclude.txt
DirectInput/: DirectInput.csproj  Form1.Designer.cs  Form1.cs  (+2 more)
vscode-plugin/ecs-language-server/: .gitignore  ecs-lsp.spec  lsp_entry.py  pyproject.toml
vscode-plugin/ecs-language-server/src/easycon_grammar/: __init__.py  ast.py  compilation.py  parser.py
vscode-plugin/ecs-language-server/src/easycon_grammar/grammar/: ecp_grammar.lark
vscode-plugin/ecs-language-server/src/easycon_script_lsp/: __init__.py  __main__.py  constants.py  server.py
vscode-plugin/ecs-language-server/src/easycon_script_lsp/features/: __init__.py  completion.py  definition.py  diagnostics.py  document_symbols.py  formatting.py  hover.py  semantic_tokens.py
vscode-plugin/ecs-language-server/src/ecs_language_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
vscode-plugin/ecs-language-server/tests/: conftest.py  test_compilation.py  test_integration.py  test_lsp_completions.py  test_lsp_definition.py  test_lsp_diagnostics.py  test_lsp_document_symbols.py  test_lsp_formatting.py  test_lsp_hover.py  test_lsp_semantic_tokens.py  test_parser_errors.py  test_parser_expressions.py  test_parser_statements.py  test_tokenization.py
(+2154 files in other folders)
